LTE-17 Added -no-color option to terraform plan command to fix formatting in Jenkins console output

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         stage('Terraform Plan') {
             steps {
                 bat 'terraform init'
-                bat 'terraform plan'
+                bat 'terraform plan -no-color'
             }
         }
         stage('Approval') {
