--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,18 +2,47 @@ pipeline {
     agent {
         label 'windows'
     }
+    environment {
+        TF_IN_AUTOMATION = 'true'
+    }
+    parameters {
+        choice(name: 'TERRAFORM_ACTION', choices: ['apply', 'destroy'], description: 'What do you want to do?')
+    }
     stages {
-        stage('Terraform Plan') {
+        // The following stages handle the sequence to run 'terraform apply' to provision our infrastructure
+        // while giving the user the option to select 'apply' or 'destroy'
+        stage ('Terraform Init') {
             steps {
                 bat 'terraform init'
-                bat 'terraform plan -no-color'
+            }
+        }
+        stage('Terraform Plan (Apply)') {
+            when {
+                expression { params.TERRAFORM_ACTION == 'apply'}
+            }
+            steps {
+                bat 'terraform plan -no-color -out jenkinsplan'
+            }
+        }
+        stage('Terraform Plan (Destroy)') {
+            when {
+                expression { params.TERRAFORM_ACTION == 'destroy'}
+            }
+            steps {
+                bat 'terraform plan -destroy -no-color -out jenkinsplan'
             }
         }
         stage('Approval') {
             steps {
-                script {
-                    def userInput = input(id: 'confirm', message: 'Apply Terraform?', parameters: [ [$class: 'BooleanParameterDefinition', defaultValue: false, description: 'Apply terraform', name: 'confirm'] ])
+                input {
+                    message "Do you approve the Terraform plan and are you read to apply it?"
+                    ok "Yes, I approve. Apply the plan now."
                 }
+            }
+        }
+        stage('Terraform Apply') {
+            steps {
+                bat 'terraform apply -input=false jenkinsplan'
             }
         }
     }
