LTE-17 Removed unnecessary comma

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
         label 'windows'
     }
     environment {
-        TF_IN_AUTOMATION = 'true',
+        TF_IN_AUTOMATION = 'true'
         TF_LOG = 'TRACE'
     }
     parameters {
