LTE-15 Removed cmd /c from command

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -51,7 +51,7 @@ pipeline {
                 expression { params.TERRAFORM_ACTION == 'apply'}
             }
             steps {
-                bat 'cmd /c jenkins/scripts/test-endpoint.cmd'
+                bat 'jenkins/scripts/test-endpoint.cmd'
             }
         }
     }
